[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uhtml-lit"
version = "1.0.6"
description = "Modern Python unittest HTML report generator."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Lit"}
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["unittest", "test", "testing", "report", "html", "htmltestrunner", "uhtml-lit"]

[project.urls]
Homepage = "https://github.com/Aquarius-0455/Uhtml-Lit"
Repository = "https://github.com/Aquarius-0455/Uhtml-Lit"
Issues = "https://github.com/Aquarius-0455/Uhtml-Lit/issues"
